# HLS_IMG_PROCESSING

./: README.md
BlockDesign/: bd_wrapper.xsa  hw_bd.xpr
HLS/_ide/: .peers.ini  settings.json  version.ini  workspace_journal.py  workspace_journal_19911.py
HLS/code/: img_sharpening_filter.cpp  img_sharpening_filter.h  tb_img_sharpening_filter.cpp
HLS/gauss_filter/: compile_commands.json  hls_config.cfg  vitis-comp.json
PLPS_HelloWorld/: PLPS_HelloWorld.xpr  design_1_wrapper.xsa  design_1_wrapper_2.xsa  gauss_1_design.xsa
PLPS_HelloWorld/.rigel_lopper/: system-top.dts.pp
PLPS_HelloWorld/_ide/: .vitisPlatformRepo.json  version.ini  workspace_journal.py  workspace_journal_11577.py  workspace_journal_14677.py  workspace_journal_17773.py
PLPS_HelloWorld_PS/.rigel_lopper/: lop-cpu-oslist.dts.pp  system-top.dts.pp
PLPS_HelloWorld_PS/AND_gate_platform/: vitis-comp.json
PLPS_HelloWorld_PS/NAND_gate_component/: compile_commands.json  vitis-comp.json
PLPS_HelloWorld_PS/_ide/: .peers.ini  .vitisPlatformRepo.json  version.ini  workspace_journal.py  workspace_journal_15022.py  workspace_journal_16473.py  workspace_journal_40352.py  workspace_journal_4594.py  workspace_journal_58772.py
PLPS_HelloWorld_PS/echo_uart/: vitis-comp.json
PLPS_HelloWorld_PS/gauss_1_app/: compile_commands.json  vitis-comp.json
PLPS_HelloWorld_PS/gauss_1_platform/: vitis-comp.json
PLPS_HelloWorld_PS/hello_2_app/: vitis-comp.json
SerialMonitorPython/: pyproject.toml
SerialMonitorPython/serial_monitor/: serial_monitor.ipynb
serial_monitor/: pyproject.toml
(+2350 files in other folders)
