[project]
name = "serial-monitor"
version = "0.1.0"
description = ""
authors = [
    {name = "Szymon Gogulski",email = "szymongogulskiedu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pyserial (>=3.5,<4.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
